# SlicerForaLABS

./: .gitignore  CMakeLists.txt  README.md
ForaLABS/: CMakeLists.txt  ImportTXM.py  Measures.py
ForaLABS/Resources/HTML/: MeasuresReport.html  MeasuresReportExport.html
ForaLABS/Resources/UI/: ForaLABS.ui  ImportTXM.ui  Measures.ui
